# lua-remote-hub

./: .gitignore  CMakeLists.txt  README.md  repository.yaml
gateways/: gateway_rx.lua  gateway_tx.lua
ha-addon/: Dockerfile  config.yaml  lrh_util.lua  main.lua  remapper.lua  run.sh
ha-addon/config/: Bluetooth.lua  C-RT1.lua  HDMI-CEC.lua  HDMI-Switcher.lua  J-MX100RC.lua  LED-RGB.lua  RC-R2.lua  config.lua  lrh_util.lua
lua/: gateway_rx.lua  gateway_tx.lua  main.lua  remapper.lua
lua/config/: C-RT1.lua  HDMI-CEC.lua  HDMI-Switcher.lua  J-MX100RC.lua  LED-RGB.lua  config.lua  config.lua.sample
packaging/: postinst  postrm  preinst  prerm
packaging/dbus/: com.khronos31.btkbservice.conf
packaging/systemd/: bluetooth-override.conf  btk-server.service  ha_gateway_rx.service  ha_gateway_tx.service  ir-daemon.service
packaging/udev/: 99-bit-trade-one.rules
scripts/: btk_server.py  sdp_record.xml  send_key.py
src/: lua_cec.cpp  usbir.cpp  usbir.h
